# arjun_plot

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  genindex.html  index.html  install.html  introduction.html  objects.inv  pyproject.toml  python-api.html  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  install.doctree  introduction.doctree  python-api.doctree
.github/workflows/: ci.yml  documentation.yaml
_sources/: index.rst.txt  install.rst.txt  introduction.rst.txt  python-api.rst.txt
arjun_plot/: __init__.py  admixture.py  karyograms.py  pca.py  spatial.py  statgen.py  utils.py
docs/: conf.py  index.rst  install.rst  introduction.rst  python-api.rst
docs/_build/doctrees/: environment.pickle  index.doctree  install.doctree  python-api.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  objects.inv  py-modindex.html  python-api.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/arjun_plot/: admixture.html  pca.html  utils.html
docs/_build/html/_sources/: index.rst.txt  install.rst.txt
stylesheets/: paper.mplstyle  presentation.mplstyle
tests/: test_karyograms.py  test_pca.py  test_statgen.py  test_utils.py
tests/test_data/: test_smartpca.eval  test_smartpca_v2.evec
tests/test_pca/: test_smartpca.evec
