[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "scipy",
    "numpy",
    "matplotlib",
    "adjustText",
    "Cartopy",
    "extension-helpers",
    "requests"
]
build-backend = "setuptools.build_meta"


[project]
name = "arjun_plot"
description = "\"Personal plotting routines.\""
keywords = ["plotting", "utilities"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3"]
requires-python = ">= 3.9"
dependencies = [ "numpy", "scipy", "pandas", "adjustText", "Cartopy"]
dynamic = ["version"]
authors = [{name = "Arjun Biddanda", email = "aabiddanda@gmail.com"}]


[project.urls]
Homepage = "https://github.com/aabiddanda/arjun_plot"

[project.optional-dependencies]
tests = [ "pytest", "pytest-cov", "hypothesis", "flake8", "sphinx"]

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE.txt"]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "arjun_plot.__version__"
